--- a/style.css
+++ b/style.css
@@ -2,4 +2,14 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+nav {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: antiquewhite;
+}
+#details {
+  position:fixed;
+  bottom: 100px;
 }
